🐛 :: [index] :: Correção no caminho dos assets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dev Links - Rômane Santos</title>
-    <link rel="stylesheet" href="/assets/css/app.css">
+    <link rel="stylesheet" href="./assets/css/app.css">
 </head>
 <body data-theme="dark">
     
@@ -12,7 +12,7 @@
 
         <header>
             <figure id="profile-image">
-                <img src="/assets/img/avatar.png" alt="Profile Image"/>
+                <img src="./assets/img/avatar.png" alt="Profile Image"/>
                 <figcaption class="text-sm">@romane.santos</figcaption>
             </figure>
             <div class="flex-center">
@@ -69,6 +69,6 @@
     </section>
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@latest/dist/ionicons/ionicons.esm.js"></script>
-    <script src="/assets/js/app.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
